# Shopping_assistant

./: .gitignore  MODEL_CARD.md  README.md  pyproject.toml  pytest.ini  requirements.txt
Scripts/: README.md  build_color_lexicon.py  build_color_scoring_calibration.py  build_domain_color_anchors.py  env.sh  eval_color_scenarios.py  generator_color_ranking_golden.py  reco_ab.py  recompute_prototypes_lab.py  smoke_reco_anchor.py
Scripts/colors/: build_chips_lab.py  build_color_naming_dataset.py  build_label_distributions.py  normalize_color_naming_dataset.py  project_namer_on_chips.py  qa_constraints.py  train_color_namer.py
Scripts/demo/: demo_reco.py
Scripts/diagnostics/: debug_constraints_deep.py  debug_constraints_sanity.py  debug_constraints_trace.py  debug_trace_nlp_to_reco.py  diag_constraints_shift.py  qa_anchor_coverage_sweep.py  qa_color_anchors_lexicon.py  qa_missing_color_diagnostics.py  qa_pool_sizes_plain_color_failsafe.py  qa_pool_thresholds_report.py
Scripts/experiments/: reco_ab.py
Scripts/tools/: build_color_scoring_calibration.py  diag_color_clusters.py  download_sephora_shade_image.py  enrich_sephora_chip_colors.py  env.example.sh  eval_color_scenarios.py  fuse_small_clusters.py  recompute_prototypes_lab.py  retry_failed_shade_images.py  run_color_scenarios.py  scrape_sephora_lipsticks_raw_items.py
data/_product_image_cache/: P1000203002__334627.avif  P1000203002__334628.avif  P1000203002__334629.avif  P1000203002__334630.avif  P1000203002__334631.avif  P1000203002__334632.avif  P1000203002__334633.avif  P1000203002__334634.avif  P1000203002__334635.avif  P1000203002__334636.avif  P1000203002__334637.avif  P1000203002__334638.avif  P1000203002__334639.avif  P1000203002__334640.avif  P1000203002__334641.avif  P1000203002__334642.avif  P1000203002__334643.avif  P1000203002__334644.avif  P1000203314__352448.avif  P1000203314__352449.avif  P1000203314__352450.avif  (+1897 more)
streamlit_app/: Home.py  README.md
tests/: conftest.py  qa_anchor_coverage_report.py  qa_anchor_grid.py  qa_color_coverage.py  qa_plain_color_bulk.py  qa_plain_color_neutrality.py  qa_pool_sizes_plain_colors.py  test_axis_merge_polarity.py  test_axis_merge_smoke.py  test_axis_projection_smoke.py  test_axis_thresholds_smoke.py  test_bright_ligthness.py  test_color_lexicon_no_modifier_singletons.py  test_color_lexicon_resolve_exact.py  test_color_ranking_goldens.py  test_conflicts_resolution.py  test_constraints_adapter.py  test_constraints_contract.py  test_preference_interpreter_contract.py  test_preference_resolver_ambiguity.py  test_preference_resolver_smoke.py  test_reco_contract.py  test_scoring_adapter_levels.py  test_scoring_adapter_smoke.py  test_scoring_invariants.py
(+86 files in other folders)
