[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Shopping_assistant"
version = "0.1.0"
description = "Shopping Assistant"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",

  # spaCy runtime (NLP pipeline depends on it)
  "spacy>=3.8,<3.9",
  "en-core-web-sm>=3.8.0,<3.9",

  "pydantic>=1.7.4,!=1.8,!=1.8.1,<2",
  "matplotlib>=3.8",
  "webcolors>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
embeddings = [
  "sentence-transformers>=2.5",
]
scrape = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "pillow>=10.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
